--- a/siwfood/src/main/resources/application.properties
+++ b/siwfood/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/siwfood
 spring.datasource.username=postgres
@@ -15,6 +15,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # = Web server
 #==================================
 server.port=8080
+server.error.whitelabel.enabled=false
+server.error.include-stacktrace=always
 #==================================
 # = Thymeleaf configurations
 #==================================
