--- a/siw_food/pom.xml
+++ b/siw_food/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>it.uniroma3.siwfood</groupId>
-	<artifactId>siwfood</artifactId>
+	<artifactId>siw_food</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>siwfood</name>
+	<name>siw_food</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
