--- a/siw_food/src/main/resources/application.properties
+++ b/siw_food/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.application.name=SiwFood
 #================================== 
 # = Datasource
 #================================== 
@@ -5,7 +6,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/siw_food
 spring.datasource.username=postgres
@@ -27,3 +28,6 @@ spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
+#=================================
+# = Messages
+#=================================
